--- a/source/_posts/炸裂的《复联3》预告里，唯独就少了他的影子.md
+++ b/source/_posts/炸裂的《复联3》预告里，唯独就少了他的影子.md
@@ -2,11 +2,11 @@
 title: “炸裂的《复联3》预告里，唯独就少了他的影子？
 abbrlink: 4a17b200
 tag: ['话题','复联3','漫威']
-categories: 话题
+categories: 电影
 ---
 
 
-《复仇者联盟3：无限战争》的首支预告在去年以24小时2.3亿的浏览量，创造了有史以来的最高纪录
+**《复仇者联盟3：无限战争》**的首支预告在去年以24小时2.3亿的浏览量，创造了有史以来的最高纪录
 
 <!--  more -->
 
